<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="alarm"
            type="com.myapps.simpleweatherapp.data.local.Alarm" />

        <variable
            name="clickListener"
            type="com.myapps.simpleweatherapp.ui.alarms.AlarmListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        card_view:cardCornerRadius="8dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/alarmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{alarm.alarmName}"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeToText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                bind:hour="@{alarm.endHour}"
                bind:minute="@{alarm.endMinute}"
                card_view:layout_constraintBottom_toBottomOf="@+id/textView9"
                card_view:layout_constraintEnd_toStartOf="@+id/deleteAlarmButton"
                card_view:layout_constraintStart_toEndOf="@+id/textView9"
                card_view:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/to"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintHorizontal_chainStyle="spread"
                card_view:layout_constraintStart_toStartOf="@+id/textView7"
                card_view:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/from"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toTopOf="@+id/textView9"
                card_view:layout_constraintHorizontal_chainStyle="spread"
                card_view:layout_constraintStart_toEndOf="@+id/alarmTypeImage"
                card_view:layout_constraintTop_toBottomOf="@+id/alarmName" />

            <TextView
                android:id="@+id/timeFromText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                bind:dateTime="@{alarm.start}"
                card_view:layout_constraintBottom_toBottomOf="@+id/textView7"
                card_view:layout_constraintEnd_toStartOf="@+id/deleteAlarmButton"
                card_view:layout_constraintStart_toEndOf="@+id/textView7"
                card_view:layout_constraintTop_toTopOf="@+id/textView7" />

            <ImageView
                android:id="@+id/alarmTypeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/alarm_type_image_description"
                bind:alarmType="@{alarm.alarmType}"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/alarmName" />

            <ImageButton
                android:id="@+id/deleteAlarmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/white"
                android:contentDescription="@string/stop_alarm_image_button_description"
                android:onClick="@{()->clickListener.onDelete(alarm)}"
                android:padding="8dp"
                card_view:layout_constraintBottom_toTopOf="@+id/startStopBtn"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.21"
                card_view:layout_constraintVertical_chainStyle="packed"
                card_view:srcCompat="@drawable/ic_baseline_delete_forever_24" />

            <ImageView
                android:id="@+id/startStopBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{()->clickListener.startStop(alarm)}"
                android:paddingHorizontal="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:src="@{alarm.isActive ? @drawable/ic_baseline_notifications_active_24 :@drawable/ic_baseline_notifications_off_24}"
                card_view:layout_constraintBottom_toTopOf="@+id/textView5"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="@+id/deleteAlarmButton"
                card_view:layout_constraintTop_toBottomOf="@+id/deleteAlarmButton" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@{alarm.isActive ? @color/teal_200 :@color/purple_700}"
                android:textSize="12sp"
                app:text="@{alarm.isActive ? @string/active :@string/disabled}"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@+id/startStopBtn"
                card_view:layout_constraintStart_toStartOf="@+id/startStopBtn"
                card_view:layout_constraintTop_toBottomOf="@+id/startStopBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
