<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="city"
            type="com.myapps.simpleweatherapp.data.local.City" />

        <variable
            name="tempUnit"
            type="com.myapps.simpleweatherapp.data.repository.TemperatureUnit" />

        <variable
            name="clickListener"
            type="com.myapps.simpleweatherapp.ui.favourite.FavouriteCityListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/touch_selector"
        android:onClick="@{()->clickListener.onClick(city)}"
        android:padding="8dp">


        <TextView
            android:id="@+id/low_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            app:drawableStartCompat="@drawable/ic_wi_direction_down"
            app:layout_constraintBottom_toBottomOf="@+id/high_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/high_temp"
            app:layout_constraintTop_toBottomOf="@+id/high_temp"
            app:temperatureUnit="@{tempUnit}"
            bind:temp="@{city.min_temp}"
            tools:text="10\u00b0" />

        <TextView
            android:id="@+id/high_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/city_text_size"
            app:drawableStartCompat="@drawable/ic_wi_direction_up"
            app:layout_constraintEnd_toStartOf="@+id/low_temp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weather_icon"
            app:layout_constraintTop_toBottomOf="@+id/current_temp"
            bind:temp="@{city.max_temp}"
            bind:temperatureUnit="@{tempUnit}"
            tools:text="19\u00b0" />

        <TextView
            android:id="@+id/current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/forecast_text_size"
            app:layout_constraintEnd_toEndOf="@+id/low_temp"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/high_temp"
            app:layout_constraintTop_toTopOf="parent"
            app:temperatureUnit="@{tempUnit}"
            bind:temp="@{city.temp}"
            tools:text="19\u00b0" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="@dimen/list_icon"
            android:layout_height="@dimen/list_icon"
            android:contentDescription="@string/weather_icon_description"
            app:layout_constraintBottom_toTopOf="@+id/updateText"
            app:layout_constraintEnd_toStartOf="@+id/high_temp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cityName"
            app:layout_constraintTop_toTopOf="@+id/current_temp"
            app:layout_constraintVertical_bias="0.375"
            bind:weatherIcon="@{city.icon}" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@{city.location}"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toTopOf="@+id/updateText"
            app:layout_constraintEnd_toStartOf="@+id/weather_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="Fayoum,...." />


        <TextView
            android:id="@+id/updateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_baseline_update_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cityName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName"
            bind:lastUpdate="@{city.date}"
            tools:text="Thu, February 11 3.34 Pm" />

        <!--        @android:color/transparent-->
        <Button
            android:id="@+id/deleteCityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:contentDescription="@string/stop_alarm_image_button_description"
            android:gravity="center"
            android:onClick="@{()->clickListener.onRemove(city)}"
            android:padding="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/remove_city"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            app:drawableEndCompat="@drawable/ic_baseline_delete_forever_24"
            app:drawableTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/low_temp"
            app:layout_constraintTop_toBottomOf="@+id/low_temp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
